added a route a check the user roles and updated the swagger acordingly
